# rust-web

./: Cargo.toml  README.md
migrations/2023-01-17-043603_create_posts/: down.sql
src/: main.rs
src/models/: mod.rs
templates/: posts.html.hbs
